task03/task03-deploy-emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
      - name: nginx-deploy
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
      volumes:
      - name: html-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-emptydir-svc
spec:
  type: NodePort
  selector:
    app: nginx-deploy
  ports:
    - port: 80
      nodePort: 30008
