task03/task03-deploy-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      volumes:
      - name: www
        persistentVolumeClaim:
          claimName: task03-nfs-pvc
      containers:
        - name : nginx-deploy
          image: nginx
          ports:
          - containerPort: 80
          volumeMounts:
          - name: www
            mountPath: /usr/share/nginx/html


---
apiVersion: v1
kind: Service
metadata:
  name: service-for-nginx
spec:
  type: NodePort
  selector:
    app: nginx-deploy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
