task03/task03-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
        - name : nginx-deploy
          image: nginx
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-for-minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001

---
apiVersion: v1
kind: Service
metadata:
  name: service-for-nginx
spec:
  selector:
    app: nginx-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
