task03/task03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task03-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: service-for-minio
            port:
              number: 9001
      - path: '/web'
        pathType: Prefix
        backend:
          service:
            name: service-for-nginx
            port:
              number: 80
